# BarcodeCompare

./: .gitignore  CMakeLists.txt  README.md
data/: 20250808-A019-01 A109#01红底 2+3+4FF 半卡 20W.rar  20250926-A019-01 A019#01红底 2+3+4FF 半卡 (Y25J04A) 30万(2).rar  20250926-A019-02 A019#01 red 2+3+4FF half card (Y25J04B) 35.2W.rar  20250926-A019-03 A019#01 red 2+3+4FF half card (Y25J04C) 34.8W.rar  test.txt
data/20250808-A019-01 A109#01红底 2+3+4FF 半卡 20W/: 20250808-A019-01 A109#01红底 2+3+4FF 半卡 20W Packing list.xls  20250808-A019-01 A109#01红底 2+3+4FF 半卡 20W 内盒.xls  20250808-A019-01 A109#01红底 2+3+4FF 半卡 20W 内盒.xlsx  20250808-A019-01 A109#01红底 2+3+4FF 半卡 20W 外箱.xls  20250808-A019-01 A109#01红底 2+3+4FF 半卡 20W 外箱.xlsx
data/20250926-A019-01 A019#01红底 2+3+4FF 半卡 (Y25J04A) 30万(2)/: 20250926-A019-01 A019#01 red 30W Packing list.xls  20250926-A019-01 A019#01 red 30W inner.csv  20250926-A019-01 A019#01 red 30W outer.csv
data/20250926-A019-02 A019#01 red 2+3+4FF half card (Y25J04B) 35.2W/: 20250926-A019-02 A019#01 red (Y25J04B) 35.2W Packing list.xls  20250926-A019-02 A019#01 red (Y25J04B) 35.2W inner.csv  20250926-A019-02 A019#01 red (Y25J04B) 35.2W outer.csv
data/IMO000101 100-XSDD000151 C77 FWT Prepaid灰色半卡20241118版 200k/: 内盒.xlsx  外箱.xlsx
data/IMO000118/: 内盒.csv  内盒.xlsx  外箱.csv  外箱.xlsx
src/: CMakeLists.txt  main.cpp
src/data/: CMakeLists.txt  box_data.h  box_data_dao.cpp  box_data_dao.h  carton_data.h  carton_data_dao.cpp  format_dao.cpp  mode.h  mode_dao.cpp  mode_dao.h  order.cpp  order.h  order_dao.cpp  order_dao.h  role_dao.cpp  user.cpp  user.h  user_dao.cpp  user_dao.h
(+174 files in other folders)
